# Riemann-Prime-Evaluation

./: .gitignore  CMakeLists.txt  README.md
include/: prime_logic.hpp  zeta_logic.hpp
src/: main.cpp  main_primes.cpp  prime_logic.cpp  zeta_logic.cpp
